--- a/app/src/main/res/layout/bottom_audio_player.xml
+++ b/app/src/main/res/layout/bottom_audio_player.xml
@@ -6,73 +6,72 @@
         android:id="@+id/audio_player_main_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        android:visibility="visible">
+        android:visibility="visible"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/audio_player_preview_cl"
             android:layout_width="match_parent"
             android:layout_height="@dimen/audio_player_preview_height"
-            android:padding="8dp"
             android:background="@color/bg_audio_player_preview"
+            android:padding="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/exo_player_view"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/exo_player_view">
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.facebook.drawee.view.SimpleDraweeView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/audio_player_preview_iv"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="36dp"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg_default_playing_song"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/audio_player_preview_title_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="marquee"
+                android:fontFamily="sans-serif"
                 android:gravity="center"
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:textSize="@dimen/song_item_title_text_size"
-                android:ellipsize="marquee"
-                android:fontFamily="sans-serif"
-                app:layout_constraintStart_toEndOf="@+id/audio_player_preview_iv"
-                app:layout_constraintEnd_toStartOf="@+id/audio_player_preview_play_iv"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/audio_player_preview_artist_tv"
-                />
+                app:layout_constraintEnd_toStartOf="@+id/audio_player_preview_play_iv"
+                app:layout_constraintStart_toEndOf="@+id/audio_player_preview_iv"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/audio_player_preview_artist_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:ellipsize="marquee"
-                android:fontFamily="sans-serif"
-                android:singleLine="true"
-                android:textColor="@color/white"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:ellipsize="marquee"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:singleLine="true"
+                android:textColor="@color/white"
                 android:textSize="@dimen/song_item_artist_text_size"
                 android:textStyle="italic"
-                app:layout_constraintTop_toBottomOf="@+id/audio_player_preview_title_tv"
-                app:layout_constraintStart_toEndOf="@+id/audio_player_preview_iv"
-                app:layout_constraintEnd_toStartOf="@+id/audio_player_preview_play_iv"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintEnd_toStartOf="@+id/audio_player_preview_play_iv"
+                app:layout_constraintStart_toEndOf="@+id/audio_player_preview_iv"
+                app:layout_constraintTop_toBottomOf="@+id/audio_player_preview_title_tv" />
 
             <ImageView
                 android:id="@+id/audio_player_preview_play_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/exo_icon_play"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:srcCompat="@drawable/exo_icon_play" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
